# cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.cargo/: config.toml.example
.github/: pull_request_template.md
.github/workflows/: ci.yml  launchpad.yml  release.yml
docs/: devices.md  usage.md  verification.md
examples/: export.md  inspect.md  verify.md
scripts/: brew-formula.rb  release.sh  render_launchpad_source.py  version_sync.py
src/: cli.rs  error.rs  main.rs
src/commands/: device.rs  export.rs  inspect.rs  mod.rs  open.rs  test.rs  verify.rs
src/output/: human.rs  json.rs  mod.rs
