[package]
name = "lukuid-cli"
version = "1.0.2"
edition = "2021"
description = "Rust CLI for opening, verifying, and browsing .luku evidence packages"
license = "Apache-2.0"
repository = "https://github.com/lukuid/cli"
homepage = "https://github.com/lukuid/cli"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
lukuid-sdk = { git = "https://github.com/lukuid/sdk.git", rev = "e5cc213212538e311985fe4349b22f305dcb98ee", version = "1.0.2", default-features = false }
open = "5.3.4"
serde_json = "1.0"
tempfile = "3.27.0"
